[package]
name = "instagram-cdn-url"
version = "0.1.2"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Instagram - Cdn Url"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/instagramapis"
homepage = "https://github.com/bk-rs/instagramapis"
documentation = "https://docs.rs/instagram-cdn-url"
keywords = []
categories = []
readme = "README.md"

[dependencies]
chrono = "0.4"
url = "2.2"
