[package]
name = "instagram-cdn-url"
version = "0.1.3"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Instagram - Cdn Url"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/instagram-rs"
homepage = "https://github.com/bk-rs/instagram-rs"
documentation = "https://docs.rs/instagram-cdn-url"
keywords = []
categories = []
readme = "README.md"

[dependencies]
chrono = "0.4"
url = "2.2"
thiserror = { version = "1.0", default-features = false }
