[package]
name = "instagram-cdn-url"
version = "0.1.4"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Instagram - Cdn Url"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/instagram-rs"
homepage = "https://github.com/bk-rs/instagram-rs"
documentation = "https://docs.rs/instagram-cdn-url"
keywords = []
categories = []
readme = "README.md"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
url = { version = "2.2", default-features = false }
