[package]
name = "instagram-hashtag-parser"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Instagram - Hashtag Parser"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/instagram-rs"
homepage = "https://github.com/bk-rs/instagram-rs"
documentation = "https://docs.rs/instagram-hashtag-parser"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["with-crate-hashtag"]

with-crate-hashtag = ["hashtag"]
with-regex = ["regex", "once_cell"]

[dependencies]
hashtag = { version = "1.0", default-features = false, optional = true }

regex = { version = "1.5", default-features = false, features = ["std", "unicode"], optional = true }
once_cell = { version = "1.8", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
csv = { version = "1.1" }
serde = { version = "1.0", features = ["derive"] }
once_cell = { version = "1.8" }
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
required-features = ["with-crate-hashtag", "with-regex"]

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
