[package]
name = "instagram-link"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Instagram - Link"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/instagramapis"
homepage = "https://github.com/bk-rs/instagramapis"
documentation = "https://docs.rs/instagram-link"
keywords = []
categories = []
readme = "README.md"

[dependencies]
url = "2.2"
base64 = "0.13"

instagram-media-shortcode = { version = "0.1", path = "../instagram-media-shortcode" }
