[package]
name = "instagram-link"
version = "0.1.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Instagram - Link"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/instagram-rs"
homepage = "https://github.com/bk-rs/instagram-rs"
documentation = "https://docs.rs/instagram-link"
keywords = []
categories = []
readme = "README.md"

[dependencies]
url = "2.2"
base64 = "0.13"
thiserror = { version = "1.0", default-features = false }

instagram-media-shortcode = { version = "=0.1.3", path = "../instagram-media-shortcode" }
