[package]
name = "instagram-link"
version = "0.1.3"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Instagram - Link"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/instagram-rs"
homepage = "https://github.com/bk-rs/instagram-rs"
documentation = "https://docs.rs/instagram-link"
keywords = []
categories = []
readme = "README.md"

[dependencies]
url = { version = "2.2", default-features = false }
base64 = { version = "0.13", default-features = false }

instagram-media-shortcode = { version = "0.1.4", path = "../instagram-media-shortcode" }
