[package]
name = "instagram-media-shortcode"
version = "0.1.3"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Instagram - Media Shortcode"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/instagram-rs"
homepage = "https://github.com/bk-rs/instagram-rs"
documentation = "https://docs.rs/instagram-media-shortcode"
keywords = []
categories = []
readme = "README.md"

[dependencies]
base64 = "0.13"

[dev-dependencies]
once_cell = "1.8"
