[package]
name = "instagram-permission"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Instagram - Permissions"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/instagram-rs"
homepage = "https://github.com/bk-rs/instagram-rs"
documentation = "https://docs.rs/instagram-permission"
keywords = []
categories = []
readme = "README.md"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
